# salva

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  publish.sh  rustfmt.toml
.circleci/: config.yml
.github/workflows/: salva-ci-build.yml
examples2d/: Cargo.toml  all_examples2.rs  basic2.rs  custom_forces2.rs  elasticity2.rs  fluids2.rs  helper.rs  layers2.rs  surface_tension2.rs
examples3d/: Cargo.toml  all_examples3.rs  basic3.rs  breaking_dam3.rs  custom_forces3.rs  elasticity3.rs  faucet3.rs  fluids3.rs  harness_basic3.rs  heightfield3.rs  helper.rs  surface_tension3.rs
src/: helper.rs  lib.rs  liquid_world.rs  timestep_manager.rs  z_order.rs
src/boundary/: boundary.rs  mod.rs
src/counters/: collision_detection_counters.rs  mod.rs  solver_counters.rs  stages_counters.rs  timer.rs
src/coupling/: collider_collision_detector.rs  collider_coupling_manager.rs  coupling_manager.rs  direct_forcing.rs  mod.rs
src/fluid/: fluid.rs  mod.rs
src/geometry/: contact_manager.rs  contacts.rs  hgrid.rs  mod.rs
src/integrations/: mod.rs
src/integrations/nphysics/: collider_coupling_manager.rs
src/integrations/rapier/: fluids_pipeline.rs  harness_plugin.rs  mod.rs  testbed_plugin.rs
src/kernel/: cubic_spline.rs  cubic_spline_kernel.rs  kernel.rs  mod.rs  poly6_kernel.rs  spiky_kernel.rs  viscosity_kernel.rs
src/object/: boundary.rs  contiguous_arena.rs  fluid.rs  interaction_groups.rs  mod.rs
src/sampling/: mod.rs  ray_sampling.rs
src/solver/: dfsph_solver.rs  helper.rs  iisph_solver.rs  mod.rs  nonpressure_force.rs  pbf_solver.rs
src/solver/elasticity/: becker2009.rs  becker2009_elasticity.rs  mod.rs
src/solver/pressure/: dfsph_solver.rs  iisph_solver.rs  mod.rs  pbf_solver.rs  pressure_solver.rs
src/solver/surface_tension/: akinci2013_surface_tension.rs  he2014_surface_tension.rs  mod.rs  wcsph_surface_tension.rs
src/solver/viscosity/: artificial_viscosity.rs  dfsph_viscosity.rs  mod.rs  xsph_viscosity.rs
