[workspace]
members = ["build/salva2d", "build/salva2d-f64", "build/salva3d", "build/salva3d-f64", "examples2d", "examples3d"]
resolver = "2"

[profile.release]
#lto = true
#codegen-units = 1

[profile.dev]
# Use slightly better optimization by default, as examples otherwise seem laggy.
opt-level = 1

[patch.crates-io]
salva2d = { path = "./build/salva2d" }
salva2d-f64 = { path = "./build/salva2d-f64" }
salva3d = { path = "./build/salva3d" }
salva3d-f64 = { path = "./build/salva3d-f64" }

#parry2d = { git = "https://github.com/sebcrozet/parry" }
#parry3d = { git = "https://github.com/sebcrozet/parry" }

#rapier2d = { git = "https://github.com/dimforge/rapier", branch = "split_geom" }
#rapier3d = { git = "https://github.com/dimforge/rapier", branch = "split_geom"  }
#rapier_testbed2d = { git = "https://github.com/dimforge/rapier", branch = "split_geom"  }
#rapier_testbed3d = { git = "https://github.com/dimforge/rapier", branch = "split_geom"  }

#rapier2d = { git = "https://github.com/dimforge/rapier" }
#rapier3d = { git = "https://github.com/dimforge/rapier" }
#rapier_testbed2d = { git = "https://github.com/dimforge/rapier" }
#rapier_testbed3d = { git = "https://github.com/dimforge/rapier" }

# rapier2d = { git = "https://github.com/dimforge/rapier", rev = "3b0d256" }
# rapier3d = { git = "https://github.com/dimforge/rapier", rev = "3b0d256" }
# rapier_testbed2d = { git = "https://github.com/dimforge/rapier", rev = "3b0d256" }
# rapier_testbed3d = { git = "https://github.com/dimforge/rapier", rev = "3b0d256" }

# rapier2d = { path = "../rapier/build/rapier2d" }
# rapier3d = { path = "../rapier/build/rapier3d" }
# rapier_testbed2d = { path = "../rapier/build/rapier_testbed2d" }
# rapier_testbed3d = { path = "../rapier/build/rapier_testbed3d" }
