[package]
name    = "examples2d"
version = "0.1.0"
authors = [ "Sébastien Crozet <developer@crozet.re>" ]
edition = "2018"

[features]
default = []
parallel = [ "rapier_testbed2d/parallel"]

[dependencies]
Inflector  = "0.11"
nalgebra   = "0.32"
parry2d = "0.15.1"
rapier2d = "0.20.0"
rapier_testbed2d = "0.20.0"
parry3d = "0.15.1"
bevy = "0.13.2"

[dependencies.salva2d]
path = "../build/salva2d"
features = [ "rapier", "rapier-testbed", "sampling" ]

[target.wasm32-unknown-unknown.dependencies]
stdweb = "0.4"

[target.wasm32-unknown-emscripten.dependencies]
stdweb = "0.4"

[target.asmjs-unknown-emscripten.dependencies]
stdweb = "0.4"

[[bin]]
name = "all_examples2"
path = "./all_examples2.rs"