[package]
name    = "examples3d"
version = "0.1.0"
authors = [ "Sébastien Crozet <developer@crozet.re>" ]
edition = "2018"

[features]
parallel = [ "rapier_testbed3d/parallel"]

[dependencies]
num-traits = "0.2"
Inflector  = "0.11"
nalgebra   = "0.23"
ncollide3d = "0.26"
kiss3d     = "0.27"
rapier3d = "0.3"
rapier_testbed3d = "0.3"

[dependencies.salva3d]
path = "../build/salva3d"
features = [ "rapier", "rapier-testbed", "sampling" ]

[target.wasm32-unknown-unknown.dependencies]
stdweb = "0.4"

[target.wasm32-unknown-emscripten.dependencies]
stdweb = "0.4"

[target.asmjs-unknown-emscripten.dependencies]
stdweb = "0.4"

[[bin]]
name = "all_examples3"
path = "./all_examples3.rs"
