[package]
name    = "examples3d"
version = "0.1.0"
authors = [ "Sébastien Crozet <developer@crozet.re>" ]
edition = "2021"

[features]
default = []
parallel = [ "rapier_testbed3d/parallel", "salva3d/parallel"]

[dependencies]
num-traits = "0.2"
Inflector  = "0.11"
nalgebra = "0.32.2"
rapier3d = "0.17.2"
rapier_testbed3d = "0.17"
parry3d = { version = "0.13.3" }
bevy = "0.9"

[dependencies.salva3d]
path = "../build/salva3d"
features = [ "rapier", "rapier-testbed", "sampling", "rapier-harness" ]

[target.wasm32-unknown-unknown.dependencies]
stdweb = "0.4"

[target.wasm32-unknown-emscripten.dependencies]
stdweb = "0.4"

[target.asmjs-unknown-emscripten.dependencies]
stdweb = "0.4"

[[bin]]
name = "all_examples3"
path = "./all_examples3.rs"

[[bin]]
name = "harness_basic3"
path = "./harness_basic3.rs"